[package]
name = "patricia-trie-ethereum"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Merkle-Patricia Trie (Ethereum Style)"
license = "GPL-3.0"

[dependencies]
trie-db = "0.22.3"
keccak-hasher = { version = "0.1.1", path = "../keccak-hasher" }
hash-db = "0.15.0"
rlp = "0.5.0"
parity-bytes = "0.1"
ethereum-types = "0.11.0"
elastic-array = "0.11"

[dev-dependencies]
memory-db = "0.26.0"
keccak-hash = "0.7.0"
journaldb = { path = "../journaldb" }
criterion = "0.3"

[[bench]]
name = "rlp_node_codec"
harness = false
